--- a/packages/tmpl/package.json
+++ b/packages/tmpl/package.json
@@ -35,5 +35,13 @@
 		"tsup": "^6.5.0",
 		"typedoc": "^0.23.24",
 		"typescript": "^4.9.4"
-	}
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/JacobLinCool/tmpl.git"
+	},
+	"bugs": {
+		"url": "https://github.com/JacobLinCool/tmpl/issues"
+	},
+	"homepage": "https://jacoblincool.github.io/tmpl"
 }
