--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
 	"scripts": {
 		"prepare": "husky install",
 		"format": "prettier --write --ignore-path .gitignore **/*.{ts,json,yaml,yml}",
-		"test": "jest --coverage"
+		"test": "jest --coverage",
+		"changeset": "changeset"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.26.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
 		"@types/jest": "^29.2.6",
 		"@types/node": "^18.11.18",
