--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,11 @@ jobs:
     release:
         name: Release
         runs-on: ubuntu-latest
+        timeout-minutes: 30
+        permissions:
+            contents: write
+            issues: write
+            pull-requests: write
         steps:
             - name: Checkout Repo
               uses: actions/checkout@v3
@@ -21,14 +26,16 @@ jobs:
                   version: latest
                   run_install: true
 
-            - name: Build Docs
-              run: pnpm -r build && pnpm -r build:docs
+            - name: Build
+              run: pnpm -r build
 
             - name: Create Release Pull Request or Publish to NPM
               id: changesets
               uses: changesets/action@v1
               with:
                   publish: pnpm publish -r --verbose --access public --no-git-checks
+                  version: pnpm changeset version
+                  title: Release Packages
               env:
-                  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
