--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"changeset": "changeset"
 	},
 	"devDependencies": {
+		"@changesets/changelog-github": "^0.4.8",
 		"@changesets/cli": "^2.26.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
 		"@types/jest": "^29.2.6",
